--- a/app/assets/stylesheets/api/signup.css
+++ b/app/assets/stylesheets/api/signup.css
@@ -5,11 +5,14 @@
  /* white #ffff    */
  /* night #021623  */
  /* light-gray #bfbfbf */
+ /* magenta hover #5e1638  */
+ /*  charcol #1b1a1b    */
 
 
 .signup-background {
     background-color: #021623;
-    height: 1000px;
+    height: 100%;
+    padding-bottom: 12%;
 }
 
  #logo-signup {
@@ -28,6 +31,8 @@
     justify-content: space-between;
     align-items: center;
     height: 7%;
+    margin: 0%;
+    padding: 1%;
 }
 .signup-nav li {
     list-style: none;
@@ -39,19 +44,38 @@
 }
 
 
-.signup-form-container {
+.signup-form-container :not(.signup-btn) {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-.signup-form-container p {
+.signup-form-container p { /* "create your account */
     color: white;
     font-family: "Graphik Web Regular";
     font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 0%;
 }
 
-.signup-form {
+.signup-form-container p:nth-child(2) {
+    font-size: 14px;
+    margin-bottom: 3%;
+}
+
+.signup-form .signup-form-background {
+    background-position: center;
+    background-color: white;
+    width: 515px;
+    display: flex;
+    flex-direction: column;
+    height: 345px;
+    justify-content: space-between;
+    padding: 4% 0 4% 0;
+    box-shadow: 0 10px 20px -5px black;
+}
+
+/* .signup-form {
     background-position: center;
     background-color: white;
     width: 584px;
@@ -61,24 +85,74 @@
     height: 715px;
     justify-content: space-evenly;
     align-items: center;
-    
-}
+} */
 
-.signup-form label {
-    display: flex;
+.signup-form .signup-form-background label {
     flex-direction: column;
-    font-size: 3%;
+    font-size: 60%;
+    font-weight: bold;
     text-transform: uppercase;
     color: black;
-    width: 65%;
-    
+    width: 100%;
 }
 
-.signup-form input {
-    width: 100%;
+.signup-form .signup-form-background label span {
+    color:#1b1a1b;
+    transform: translateX(-360%);
+    font-family: "Graphik Web Regular";
+}
+
+#signup-email {
+    transform: translateX(-715%);
+}
+#signup-first-name {
+    transform: translateX(-341%);
+}
+
+
+
+.signup-form .signup-form-background label input {
+    width: 84%;
+    /* transform: scaleX(1.22); */
     height: 32px;
     border-style: solid;
     border-color: #bfbfbf;
+    margin-top: 1%;
+    border-radius: 4px;
+}
+
+
+
+.signup-form .signup-btn {
+    background-color: #cc038f;
+    margin-top: 0%;
+    border: none;
+    color: white;
+    border-radius: 0%;
+    padding: 1.3% 7% 1.3% 7%;
+    font-family: "Graphik Web Regular";
+    border-radius: 4px;
+    text-transform: uppercase;
+}
+
+.signup-form .signup-btn:hover {
+    background-color: #5e1638;
+    cursor: pointer;
+    
+}
+
+#signup-login-btn {
+     color: #16b9be;
+     text-transform: uppercase;
+     font-family: "Graphik Web Regular";
+     font-weight: 900;
+     text-decoration: none;
+}
+
+#signup-t-c {
+    margin-top: 3%;
+    font-size: 12px;
+    padding-bottom: 0%;
 }
 
 
