--- a/app/assets/stylesheets/api/signup.css
+++ b/app/assets/stylesheets/api/signup.css
@@ -11,7 +11,7 @@
 
 .signup-background {
     background-color: #021623;
-    height: 100%;
+    height: 100vh;
     padding-bottom: 12%;
 }
 
@@ -145,9 +145,10 @@
 #signup-login-btn {
      color: #16b9be;
      text-transform: uppercase;
-     font-family: "Graphik Web Regular";
-     font-weight: 900;
+     font-family: "GraphikLCGMedium";
      text-decoration: none;
+     letter-spacing: 1.5px;
+     font-size: 16px;
 }
 
 #signup-t-c {
