css on auth - excluding background images

--- a/app/assets/stylesheets/api/login_modal.css
+++ b/app/assets/stylesheets/api/login_modal.css
@@ -135,6 +135,7 @@
     margin: none;
     font-family: "Graphik Web Bold";
     transform: translateY(170%) translateX(2%);
+    text-transform: capitalize;
 
 }
 
