--- a/app/assets/stylesheets/api/signup.css
+++ b/app/assets/stylesheets/api/signup.css
@@ -11,7 +11,7 @@
 
 .signup-background {
     background-color: #021623;
-    height: 100vh;
+    /* height: 100vh; */
     padding-bottom: 12%;
 }
 
@@ -25,7 +25,7 @@
  }
 
 .signup-nav {
-    background-color: black;
+    background-color: black ;
     color: white;
     display: flex;
     flex-direction: row;
@@ -44,6 +44,14 @@
     margin-inline-start: 1%;
 }
 
+.signup-background {
+    /* background-image: url(../hulu.png); */
+    background-position: center;
+    background-size: contain;
+    /* background-repeat: no-repeat; */
+    position: absolute;
+    width: 100%;
+}
 
 .signup-form-container :not(.signup-btn) {
     display: flex;
