--- a/app/assets/stylesheets/splash_page.css
+++ b/app/assets/stylesheets/splash_page.css
@@ -59,7 +59,7 @@ html {
 
  .splash-background-top {
     /* background-color: #16b9be; */
-    height: 445px;
+    height: 460px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -85,6 +85,7 @@ html {
      text-align: center;
      color: white;
      margin-bottom: 3%;
+     position: relative;
  }
 
  #hbo {
@@ -108,6 +109,8 @@ html {
      text-transform: uppercase;
      font-weight: bold;
      transform: translateY(-50%);
+     position: relative;
+     margin-top: 1.5%;
  }
 
  .signup-btn:hover {
