--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Hulu</title>
+  <head >
+
+    <title>Aqua</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
