--- a/app/assets/stylesheets/api/login_modal.css
+++ b/app/assets/stylesheets/api/login_modal.css
@@ -18,8 +18,10 @@
      justify-content: center;
      height: 535px;
      width: 100%;
+     position: absolute;
      /* transform: translateY(-150px); */
      transform: translateY(50px);
+     z-index: 7;
  }
 
  .login-modal-background {
@@ -46,7 +48,8 @@
      color: gray;
      opacity: 75%;
      position: absolute;
-     z-index: 7;
+     z-index: 9;
+     
  }
 
  #login-modal-close:hover {
