--- a/app/assets/stylesheets/api/login_page.css
+++ b/app/assets/stylesheets/api/login_page.css
@@ -31,16 +31,21 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 7%;
+    height: 45px;
     margin: 0%;
     padding: 1%;
 }
 .login-page-nav li {
     list-style: none;
+    margin: 0%;
 }
 
 .login-page-nav li {
     margin-inline-end: 3%;
+    margin-inline-start: 1%;
+}
+
+.login-page-nav li {
     margin-inline-start: 1%;
 }
 
@@ -79,10 +84,13 @@
     width: 515px;
     display: flex;
     flex-direction: column;
-    height: 130px;
+    height: 150px;
     justify-content: space-between;
     padding: 4% 0 4% 0;
     box-shadow: 0 10px 20px -5px black;
+    position: absolute;
+    padding-bottom: 45px;
+    padding-top: 45px;
 }
 
 /* .signup-form {
@@ -132,15 +140,19 @@
 
 .login-page-form .login-page-btn {
     background-color: #cc038f;
-    margin-top: 3%;
     border: none;
     color: white;
     border-radius: 0%;
-    padding: 1.3% 7% 1.3% 7%;
     font-family: "Graphik Web Regular";
     border-radius: 4px;
     text-transform: uppercase;
     font-size: 16px;
+    outline: none;
+    z-index: 25;
+    width: 400px;
+    height: 56px;
+    transform: translateY(530%);
+
 }
 
 .login-page-form .login-page-btn:hover {
@@ -150,6 +162,14 @@
 }
 
 
-
+#login-page-error-message {
+    position: absolute;
+    z-index: 5;
+    color: red;
+    font-size: 13px;
+    margin: none;
+    /* transform: translateX(427px) translateY(-134px); */
+    transform: translateY(370%);
+}
 
 
