--- a/app/assets/stylesheets/api/signup.css
+++ b/app/assets/stylesheets/api/signup.css
@@ -9,10 +9,16 @@
  /*  charcoal #1b1a1b    */
 
 
+
 .signup-background {
     background-color: #021623;
-    /* height: 100vh; */
+    height: 200vh;
     padding-bottom: 12%;
+    position: absolute;
+    z-index: -1;
+    padding: 0%;
+    width: 100%;
+
 }
 
  #logo-signup {
@@ -31,9 +37,10 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 7%;
+    height: 45px;
     margin: 0%;
     padding: 1%;
+    position: relative;
 }
 .signup-nav li {
     list-style: none;
@@ -46,11 +53,15 @@
 
 .signup-background {
     /* background-image: url(../hulu.png); */
-    background-position: center;
-    background-size: contain;
+    /* background-position: center; */
+    /* background-size: contain; */
     /* background-repeat: no-repeat; */
-    position: absolute;
-    width: 100%;
+    /* position: absolute; */
+    /* width: 100%; */
+}
+
+.signup-form-container {
+
 }
 
 .signup-form-container :not(.signup-btn) {
@@ -82,6 +93,8 @@
     justify-content: space-between;
     padding: 4% 0 4% 0;
     box-shadow: 0 10px 20px -5px black;
+    position: absolute;
+    z-index: -1;
 }
 
 /* .signup-form {
@@ -139,11 +152,15 @@
     border: none;
     color: white;
     border-radius: 0%;
-    padding: 1.3% 7% 1.3% 7%;
+    width: 400px;
+    height: 56px;
     font-family: "Graphik Web Regular";
     border-radius: 4px;
     text-transform: uppercase;
     outline: none;
+    z-index: 5;
+    transform: translateY(750%);
+    position: relative;
 }
 
 .signup-form .signup-btn:hover {
@@ -165,6 +182,9 @@
     margin-top: 3%;
     font-size: 12px;
     padding-bottom: 0%;
+    transform: translateY(4530%);
+    z-index: 8;
+    color: white;
 }
 
 #signup-first-name-error {
@@ -172,9 +192,12 @@
     z-index: 5;
     color: red;
     text-transform: capitalize;
-    transform: translateY(-3140%) translateX(260%);
+    /* transform: translateY(-3140%) translateX(260%); */
+    /* transform: translateX(-100%) translateY(-150%); */
+    transform: translateY(445%);
     margin: none;
-    font-size: 15px;
+    font-size: 13px;
+    margin: 0%;
 }
 
 #signup-email-error {
@@ -182,25 +205,46 @@
     z-index: 5;
     color: red;
     text-transform: capitalize;
-    font-size: 14px;
+    font-size: 13px;
     margin: none;
-    transform: translateY(-1965%) translateX(370%);
+    /* transform: translateY(-1965%) translateX(370%); */
+    /* transform: translateX(-100%); */
+    transform: translateY(445%);
+    margin: 0%;
 }
 #signup-email-error2 {
     position: absolute;
     z-index: 5;
     color: red;
     text-transform: capitalize;
-    font-size: 14px;
+    font-size: 13px;
     margin: none;
-    transform: translateY(-1965%) translateX(228%);
+    /* transform: translateY(-1965%) translateX(228%); */
+    /* transform: translateX(-100%); */
+    transform: translateY(445%);
+    margin: 0%;
 }
 #signup-password-error {
     position: absolute;
-    z-index: 5;
+    z-index: 20;
     color: red;
     text-transform: capitalize;
-    font-size: 14px;
+    font-size: 13px;
     margin: none;
-    transform: translateY(-1260%) translateX(123%);
+    /* transform: translateY(-1260%) translateX(123%); */
+    /* transform: translateY(4450%); */
+    /* transform: translateX(-100%); */
+    transform: translateY(445%);
+    margin: 0%;
+}
+
+.errors-container {
+    /* width: 57%;
+    transform: translateX(100%);
+    margin: 0%;
+    display: flex;
+    align-items: center;
+    flex-direction: column; */
+    transform: translateX(300px);
+
 }
