--- a/app/assets/stylesheets/api/signup.css
+++ b/app/assets/stylesheets/api/signup.css
@@ -52,12 +52,12 @@
 }
 
 .signup-background {
-    /* background-image: url(../hulu.png); */
-    /* background-position: center; */
-    /* background-size: contain; */
+    background-image: url(../hulu.png);
+    background-position: center;
+    background-size: contain;
     /* background-repeat: no-repeat; */
-    /* position: absolute; */
-    /* width: 100%; */
+    position: absolute;
+    width: 100%;
 }
 
 .signup-form-container {
