--- a/app/assets/stylesheets/splash_page.css
+++ b/app/assets/stylesheets/splash_page.css
@@ -9,7 +9,9 @@
  /*  charcoal #1b1a1b    */
  /* dark teal  */
 
-
+.splash-background {
+    background-color: #021623;
+}
 
  .splash-container {  /* hero */
     background-image: url(man-tv.png);
@@ -18,6 +20,7 @@
     background-repeat: no-repeat;
     position: absolute;
     width: 100%;
+    display: block;
     /* z-index: -1; */
 }
 .splash-nav {
@@ -33,6 +36,7 @@
     position: absolute;
     width: 100%;
     z-index: 6;
+    transition: 1.35s;
 }
 
 .splash-nav-scroll {
@@ -151,3 +155,13 @@
 } */
 
 
+.splash-movie-hero {
+    background-image: url(movie-hero.png);
+    height: 1690px;
+    /* background-position: center; */
+    background-size: contain;
+    background-repeat: no-repeat;
+    transform: translateY(32%);
+    width: 100%;
+    position: absolute;
+}
