--- a/app/assets/stylesheets/api/movies_index_item.css
+++ b/app/assets/stylesheets/api/movies_index_item.css
@@ -2,11 +2,15 @@ h1 {
     color: white;
 }
 
-/* .movie-container {
-    z-index: 3;
-    display: flex;
-    flex-direction: column;
+.movie-container img{
     position: absolute;
-    justify-content: space-between;
-    height: 700px;
-} */
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    background-size: contain;
+    width: 100%;
+}
