--- a/app/assets/stylesheets/api/movies_index_items.css
+++ b/app/assets/stylesheets/api/movies_index_items.css
@@ -82,3 +82,39 @@ h1 {
     transition: .5s;
     cursor: pointer;
 }
+
+.movie-container h3 {
+    z-index: 56;
+    position: absolute;
+    color: white;
+    font-size: 46px;
+    font-family: "Graphik LC TT Thin";
+    transform: translateY( 268%) translateX(7%);
+    text-transform: uppercase;
+}
+.movie-container p {
+    z-index: 56;
+    position: absolute;
+    color: white;
+    transform: translateY(255%) translateX(8%);
+    width: 354px;
+    font-size: 20px;
+    font-family: "Graphik LC TT Thin";
+    letter-spacing: 1.2px;
+}
+
+.featured-items-flex p {
+    z-index: 55;
+    list-style: none;
+    text-decoration: none;
+    color: white;
+    position: absolute;
+    transform: translateY(-400%) translateX(10%);
+    font-family: "Graphik LC TT Thin";
+    text-transform: uppercase;
+    font-size: 35px;
+}
+
+.featured-items-flex {
+    text-decoration: none;
+}
