--- a/app/assets/stylesheets/api/movies_index_items.css
+++ b/app/assets/stylesheets/api/movies_index_items.css
@@ -112,7 +112,8 @@ h1 {
     transform: translateY(-400%) translateX(10%);
     font-family: "Graphik LC TT Thin";
     text-transform: uppercase;
-    font-size: 35px;
+    font-size: 120%;
+    object-fit: contain;
 }
 
 .featured-items-flex {
