--- a/app/assets/stylesheets/api/login_modal.css
+++ b/app/assets/stylesheets/api/login_modal.css
@@ -16,7 +16,7 @@
      display: flex;
      align-items: center;
      justify-content: center;
-     height: 535px;
+     height: 540px;
      width: 100%;
      position: fixed;
      transform: translateY(-750px);
@@ -30,7 +30,7 @@
      height: 540px;
      transition-duration: 0.4s;
      background-color: white;
-     position: absolute;
+     position: fixed;
      z-index: -1;
  }
  .login-modal-container {
