--- a/app/assets/stylesheets/splash_page.css
+++ b/app/assets/stylesheets/splash_page.css
@@ -13,19 +13,19 @@
     background-color: #021623;
 }
 
-.background-continue {
+/* .background-continue {
     background-color: #021623;
     height: 1500px;
-}
+} */
 
  .splash-container {  /* hero */
     background-image: url(man-tv.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    position: absolute;
+    position: relative;
     width: 100%;
-    display: block;
+    /* display: block; */
     /* z-index: -1; */
 }
 .splash-nav {
@@ -92,7 +92,8 @@
 
  .splash-background-top {
     /* background-color: #16b9be; */
-    height: 520px;
+    min-height: 520px;
+    height: 47vw;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -162,11 +163,15 @@
 
 .splash-movie-hero {
     background-image: url(movie-hero.png);
-    height: 1690px;
+    /* height: 1000px; */
     /* background-position: center; */
-    background-size: contain;
+    background-position: center;
+    background-size: cover;
     background-repeat: no-repeat;
-    transform: translateY(32%);
+    /* background-repeat: no-repeat; */
+    /* transform: translateY(3%); */
+    margin-top: 2%;
     width: 100%;
-    position: absolute;
+    height: 60vw;
+    position: relative;
 }
