--- a/app/assets/stylesheets/api/movies_index.css
+++ b/app/assets/stylesheets/api/movies_index.css
@@ -8,6 +8,15 @@
  /* magenta hover #5e1638  */
  /*  charcoal #1b1a1b    */
 
+html, body {
+    overflow-x: hidden;
+}
+
+.app-background {
+    background-color: #010116;
+    height: 2000px;
+    overflow-x: hidden;
+}
 
 .nav-main {
     display: flex;
@@ -17,7 +26,10 @@
     padding: none;
     color: white;
     height: 45px;
-    padding: 1%;
+    /* padding: 1%; */
+    /* padding: 1% 1%; */
+    padding-top: 1%;
+    padding-bottom: 1%;
     transition: 1.35s;
     position: absolute;
     width: 100%;
@@ -29,10 +41,7 @@
     color: white;
 } */
 
-.app-background {
-    background-color: #010116;
-    height: 2000px;
-}
+
 
 .nav-main-scroll {
     background-color: #021623;
