--- a/app/assets/stylesheets/api/movies_index.css
+++ b/app/assets/stylesheets/api/movies_index.css
@@ -106,6 +106,8 @@ html, body {
     flex-direction: row;
     justify-content: flex-end;
     width: 100%;
+    margin-top: 45px;
+    position: absolute;
 }
 
 .user-dropdown-no-select {
@@ -120,7 +122,7 @@ html, body {
     font-size: 13px;
     height: 250px;
     width: 150px;
-    transform: translateY(-18px) translateX(-12px);
+    /* transform: translateY(-18px) translateX(-12px); */
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
