test herkou load time 2

--- a/app/assets/stylesheets/splash_page.css
+++ b/app/assets/stylesheets/splash_page.css
@@ -165,7 +165,7 @@
 
 
 .splash-movie-hero {
-    background-image: url(movie-hero.png);
+    background-image: url(https://aqua-app-dev.s3-us-west-1.amazonaws.com/movie-hero.png);
     /* height: 1000px; */
     /* background-position: center; */
     background-position: center;
