--- a/app/assets/stylesheets/api/movie_show.css
+++ b/app/assets/stylesheets/api/movie_show.css
@@ -1,17 +1,29 @@
 .video-container {
-    justify-content: center;
-    height: 1000px;
     background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
-.video-container:hover {
+/* .video-container:hover {
     background-color: #010116;
-}
+} */
 
 #show-video {
+    /* width: 100%; */
+    height: 100vh;
+    outline: none;
+    position: absolute;
+    /* transform: translateY(15.3%); */
+}
+
+@media only screen and (max-width: 1530px) {
+  #show-video {
     width: 100%;
     height: auto;
     outline: none;
     position: absolute;
-    transform: translateY(15.3%);
+    }
+
 }
