--- a/app/assets/stylesheets/api/movies_index_items.css
+++ b/app/assets/stylesheets/api/movies_index_items.css
@@ -132,7 +132,7 @@ h1 {
     text-decoration: none;
     color: white;
     position: absolute;
-    /* transform: translateY(-400%) translateX(10%); */
+    transform: translateY(-500%);
     font-family: "Graphik LC TT Thin";
     text-transform: uppercase;
     font-size: 2vw;
