--- a/app/assets/stylesheets/api/movies_index.css
+++ b/app/assets/stylesheets/api/movies_index.css
@@ -72,7 +72,8 @@ html, body {
 .nav-right {
     display: flex;
     flex-direction: row;
-    margin-right: 20px;
+    align-items: center;
+    margin-right: 30px;
     list-style: none;
 }
 
@@ -98,6 +99,39 @@ html, body {
 
 .nav-logo-scroll {
     color: white;
+}
+
+.circle-letter {
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    padding: 9px 10px 8px 11px;
+
+    background: rgba(255, 255, 255, .1);
+    
+    color: #ffffff;
+    text-align: center;
+
+    font-size: 16px;
+
+    margin-right: 12%;
+    transition: 1.35s;
+}
+
+.circle-letter-scroll {
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    padding: 9px 10px 8px 11px;
+
+    background: white;
+    
+    color: #1b1a1b;
+    text-align: center;
+
+    font-size: 16px;
+
+    margin-right: 12%;
 }
 
 
