--- a/app/assets/stylesheets/api/movies_index.css
+++ b/app/assets/stylesheets/api/movies_index.css
@@ -77,6 +77,7 @@ html, body {
     list-style: none;
 }
 
+
 .nav-main li:not(.nav-logo) {
     margin-left: 20px;
     margin-right: 20px;
@@ -85,6 +86,7 @@ html, body {
      text-decoration: none;
      letter-spacing: 1.2px;
      font-size: 14px;
+     white-space: nowrap;
 }
 
 .nav-logo {
@@ -134,7 +136,19 @@ html, body {
     margin-right: 12%;
 }
 
+#my-content {
+    display: flex;
+    align-items: center;
+}
 
+#check-icon, #search-icon, #browse-icon {
+    width: 24px;
+}
+
+
+#search-space, #check-space, #browse-space {
+    margin-right: 8%;
+}
 .user-dropdown-flex {
     display: flex;
     flex-direction: row;
@@ -179,10 +193,15 @@ html, body {
     filter: brightness(100%);
 }
 
-.user-btn {
+.user-btn:hover {
     cursor: pointer;
 }
 
 .sub-items {
     position: relative;
+}
+
+#search {
+    display: flex;
+    align-items: center;
 }
