--- a/app/assets/stylesheets/api/movie_show.css
+++ b/app/assets/stylesheets/api/movie_show.css
@@ -1,7 +1,7 @@
 .video-container {
     background-color: black;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     height: 100vh;
 }
@@ -25,10 +25,58 @@
 /* For when scroll height > offset height */ 
   #show-video-width {
     width: 100%;
-    height: auto;
+    height: 100%;
     outline: none;
     position: absolute;
     }
 
 
 /* } */
+
+.vid-overlay-initial {
+    display: none;
+}
+
+.vid-overlay {
+    width: 100%;
+    height: 50%;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+#vid-heading {
+    width: 100%;
+    height: 10vh;
+    display: flex;
+}
+
+#vid-title {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    color: white;
+    font: 3vw "Graphik LC TT Thin";
+     transform: translateY(20%) translateX(15%);
+    
+}
+
+#vid-close {
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+    transform: translateY(40%) translateX(-4%);
+    color: white;
+    font: 20px "Graphik LC TT Thin"
+
+}
+
+#vid-close:hover {
+    cursor: pointer;
+}
+
+.video-dim {
+    z-index: 9;
+}
