--- a/app/assets/stylesheets/api/movies_index_items.css
+++ b/app/assets/stylesheets/api/movies_index_items.css
@@ -69,8 +69,8 @@ h1 {
 }
 
 #feat-play img {
-    width: 3vw;
-    z-index: 20;
+    width: 35px;
+    z-index: 57;
     opacity: 70%;
 }
 
@@ -99,7 +99,7 @@ h1 {
 #feat-actions {
     display: flex;
     flex-direction: column;
-    /* height: 100%; */
+    height: 100%;
     width: 50%;
     justify-content: center;
     align-items: flex-end;
