--- a/app/assets/stylesheets/api/movies_index_items.css
+++ b/app/assets/stylesheets/api/movies_index_items.css
@@ -207,7 +207,7 @@ h1 {
     background-size: center;
     width: 100%;
     height: 100%;
-    transition: .5s;
+    /* transition: .5s; */
 }
 
 #li-flex {
@@ -217,10 +217,15 @@ h1 {
 
 #li-flex:hover {
     transform: scale(1.027);
-    transition: .5s;
+    /* transition: .5s; */
     cursor: pointer;
     z-index: 26;
     position: relative;
+}
+
+#li-flex:hover .idx-thumb-hover {
+    height: 68.358625762%;
+    transition: .6s;
 }
 
 
@@ -261,4 +266,25 @@ h1 {
 #li-flex {
     display: flex;
     align-items: flex-end;
+}
+.idx-thumb {
+    position: relative;
+    z-index: 3;
+    /* transition: .6s; */
+}
+
+
+.idx-thumb:hover {
+    z-index: 1;
+}
+.idx-thumb-hover {
+    position: absolute;
+    z-index: 2;
+    transition: .6s;
+    object-fit: cover;
+    object-position: 0 100%;
+}
+
+.idx-thumb-hover:hover {
+    
 }
